Lagrer pågående journalføringer ved henting.