@@ -1,34 +1,24 @@
 package no.nav.tag.tiltaksgjennomforing.journalfoering;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.mockito.Mockito.anyIterable;
-import static org.mockito.Mockito.atLeastOnce;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-
-import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
-import java.util.stream.Collectors;
 import no.nav.tag.tiltaksgjennomforing.autorisasjon.InnloggingService;
-import no.nav.tag.tiltaksgjennomforing.avtale.Avtale;
-import no.nav.tag.tiltaksgjennomforing.avtale.AvtaleInnhold;
-import no.nav.tag.tiltaksgjennomforing.avtale.AvtaleInnholdRepository;
-import no.nav.tag.tiltaksgjennomforing.avtale.AvtaleRepository;
-import no.nav.tag.tiltaksgjennomforing.avtale.TestData;
+import no.nav.tag.tiltaksgjennomforing.avtale.*;
 import no.nav.tag.tiltaksgjennomforing.exceptions.TilgangskontrollException;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
+
+import java.time.LocalDateTime;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
+import java.util.stream.Collectors;
+
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.mockito.Mockito.*;
 
 @RunWith(MockitoJUnitRunner.class)
 public class InternalAvtaleControllerTest {
@@ -54,7 +44,9 @@ public class InternalAvtaleControllerTest {
     public void henterAvtalerTilJournalfoering() {
         doNothing().when(innloggingService).validerSystembruker();
         when(avtaleInnholdRepository.finnAvtaleVersjonerTilJournalfoering()).thenReturn(avtaleInnholdList);
+        when(avtaleInnholdRepository.saveAll(anyIterable())).thenReturn(avtaleInnholdList);
         List<AvtaleTilJournalfoering> avtalerTilJournalfoering = internalAvtaleController.hentIkkeJournalfoerteAvtaler();
+        verify(avtaleInnholdRepository, times(1)).saveAll(eq(avtaleInnholdList));
         assertEquals(5, avtalerTilJournalfoering.size());
         avtalerTilJournalfoering.forEach(avtaleTilJournalfoering -> assertNotNull(avtaleTilJournalfoering.getAvtaleId()));
     }
@@ -96,7 +88,7 @@ public class InternalAvtaleControllerTest {
         Avtale avtale3 = TestData.enAvtaleMedFlereVersjoner();
         avtale3.getVersjoner().get(0).setGodkjentAvVeileder(LocalDateTime.now());
         avtale3.setId(AVTALE_ID_3);
-        return Arrays.asList(avtale, avtale2, avtale3);
+        return List.of(avtale, avtale2, avtale3);
     }
 }
 
